--- a/public/notes.html
+++ b/public/notes.html
@@ -18,7 +18,7 @@
     <a class="navbar-brand" href="/">Note Taker </a>
     <div class="icons">
       <button class="save-note btn btn-default"><i class="fas fa-save"></i> Save</button>
-      <button class="new-note btn btn-default">
+      <button class="new-note btn btn-primary">
         <i class="fas fa-plus"></i> Add
       </button>
     </div>
