--- a/public/notes.html
+++ b/public/notes.html
@@ -17,9 +17,9 @@
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Note Taker </a>
     <div class="icons">
-      <button class="save-note btn btn-default"><i class="fas fa-save"></i> Save</button>
+      <button class="save-note btn btn-default"><i class="fas fa-save"></i></button>
       <button class="new-note btn btn-primary">
-        <i class="fas fa-plus"></i> Add
+        <i class="fas fa-plus"></i>
       </button>
     </div>
   </nav>
